[workspace]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-only"
authors = ["skymrp project contributors"]
homepage = "https://skymrp.org/"

[package]
name = "skymrp"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }

[lib]
# https://users.rust-lang.org/t/making-both-binary-and-cdylib-from-one-package/29105
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "skymrp"
path = "src/bin.rs"

[features]
default = ["sonivox"]
sonivox = []
rustysynth = ["dep:rustysynth"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
cc = "1.0.83"
cmake = "0.1.49"

[dependencies]
skymrp_dynarmic_wrapper = { path = "src/cpu/dynarmic_wrapper" }
skymrp_version = { path = "src/version" }
# skymrp_loader = { path = "src/mrp"}
libc = "0.2.180"
sdl2 = { version = "0.38.0", features = ["hidapi"] }
sdl2-sys = "0.38.0"
lazy_static = "1.5.0"
rustysynth = { version = "1.3.6", optional = true }
cpal = "0.17.3"
unicorn-engine = { version = "2.1.5", default-features = false, features = ["arch_arm"] }


[build-dependencies]
cargo-license = "0.5.1"
cc = { workspace = true }
cmake = { workspace = true }
