[package]
name = "skymrp"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-only"
authors = ["skymrp project contributors"]
homepage = "https://skymrp.org/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = { version = "0.38.0", features = ["bundled", "static-link"] }
sdl2-sys = "0.38.0"