[package]
name = "skymrp_loader"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }

[lib]
name = "skymrp_loader"
path = "lib.rs"

[dependencies]
thiserror = "1.0"
encoding_rs = "0.8"
log = "0.4"
flate2 = "1.0"
byteorder = "1.3"
